--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <h5 class="text-center bg-dark p-2">2D Digital Artist &amp; Craftswoman</h5>
                   </div>
                 </div>
-                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark p-2" style="" href="NatalieSmith/nataliesmith.html">Portfolio &amp; CV</a>
+                <p class="mb-0 bg-primary px-2 py-2 text-left">Natalie is a 2D digital artist. She has always been passionate about art and being creative since her first drawing as a child. Her responsibilities include conceptualizing various game ideas and creating art assets using industry standard software alongside being equippped with the most popular top grade hardware. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.&nbsp;</p><a class="btn my-2 btn-block btn-dark p-2" style="" href="nataliesmith/index.html">Portfolio &amp; CV</a>
               </div>
             </div>
           </div>
