--- a/connororton/index.html
+++ b/connororton/index.html
@@ -56,20 +56,45 @@
       </div>
     </div>
   </div>
-  <div class="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+  <div class="pb-4">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Games Programming Portfolio</b></h3>
+          <h3 class="bg-dark text-center display-4 py-2 mt-2 mx-auto" style=""><b class="text-center">Game Portfolio</b></h3>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
+          <p class="text-left p-2 bg-primary"><b>Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><span class="">My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.&nbsp;All artwork created by Natalie Smith of Fine Chap Games.</b></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+              <div class="embed-responsive embed-responsive-16by9 pb-2">
+                <iframe src="https://www.youtube.com/embed/8m_oyt7kLKs" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
+              </div>
+              <div class="embed-responsive embed-responsive-16by9 pb-2">
+                <iframe src="https://www.youtube.com/embed/TejccNBTFFU" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
     </div>
   </div>
   <div class="pb-4" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Once Upon A Fantasy (Upcoming) - Unity, C#</b></h3>
+          <h3 class="text-center bg-secondary p-2 mt-2" style=""><b>Once Upon A Fantasy (Upcoming) - Unity, C#</b></h3>
           <p class="text-left p-2 bg-primary"><b>Once Upon A Fantasy is an upcoming pixel art 2D tower defense game developed in Unity and written in C# for android devices and PC. The game features building towers that are utilized to defend against waves of enemies. The player is able to build a tower base that buffs the tower and a tower weapon that fires projectiles towards enemies, combining these elements together will create devastating combat combos to claim victory against the opposing force.<br><span class=""><br>My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Building and exporting the game<br><br>All artwork created by Natalie Smith of Fine Chap Games.</b></p>
         </div>
       </div>
@@ -80,28 +105,6 @@
               <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
               <div class="embed-responsive embed-responsive-16by9 pb-2">
                 <iframe src="https://www.youtube.com/embed/M25AVCYh1ko" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="pb-4" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2 mt-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary"><b>Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><span class="">My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.&nbsp;All artwork created by Natalie Smith of Fine Chap Games.</b></p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="row">
-            <div class="col-md-12">
-              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
-              <div class="embed-responsive embed-responsive-16by9 pb-2">
-                <iframe src="https://www.youtube.com/embed/TejccNBTFFU" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
               </div>
             </div>
           </div>
