--- a/index.html
+++ b/index.html
@@ -79,6 +79,31 @@
       </div>
       <div class="row">
         <div class="col-md-12">
+          <h3 class="bg-secondary text-center p-2">Blight of the Rose (Upcoming)</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p class="mb-0 bg-primary py-2 px-2 text-left"> This development update showcases a sample 2D environment, combat, various menu systems, various gameplay features, audio design and more.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 mt-2">
+          <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+          <div class="embed-responsive embed-responsive-16by9 mb-2">
+            <iframe src="https://www.youtube.com/embed/8m_oyt7kLKs" allowfullscreen="" class="embed-responsive-item"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="bg-dark text-center display-4 py-2 mx-auto mt-2" style="">Game Projects</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
           <h3 class="bg-secondary text-center p-2">Once Upon A Fantasy (Upcoming)</h3>
         </div>
       </div>
