--- a/connororton/index.html
+++ b/connororton/index.html
@@ -28,13 +28,13 @@
       </div>
       <div class="row">
         <div class="col-md-12 pt-2" style="">
-          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton BSc</b><br></h3>
-          <h5 class="text-center bg-dark p-2">Games/Applications Programmer</h5>
+          <h3 class="text-center bg-dark p-2"><b class="">Connor Orton MA, BSc</b><br></h3>
+          <h5 class="text-center bg-dark p-2">Game Programmer/Designer</h5>
         </div>
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary"><b>I am a highly motivated, passionate and dedicated games programmer. I graduated at Nottingham Trent University where I studied Games Production BSc achieving first class honours for my final grade. I am currently studying a part time Indie Games Development master’s degree whilst looking for employment as a games programmer in the games industry. I have taught myself C#, Unreal Blueprint and Python in my free time using books, online courses and applications and I have plans to further my skillset by improving fluency in C++ and other programming languages and software. Find my CV and portfolio below that I've developed over the years in my free time and at university.</b></p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a graduate of Indie Game Production MA where I achieved a pass and I’m also a graduate of Games Production BSc where I achieved first class honours. My other educational achievements include diplomas in the subjects of 2D, 3D game development and ICT. I can write code in several programming languages including C#, C++ and Python alongside having experience with the latest industry standard so􀅌ware, source control and most up to date game engines.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
