--- a/connororton/index.html
+++ b/connororton/index.html
@@ -34,11 +34,12 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a graduate of Indie Game Production MA where I achieved a pass and I’m also a graduate of Games Production BSc where I achieved first class honours. My other educational achievements include diplomas in the subjects of 2D, 3D game development and ICT. I can write code in several programming languages including C#, C++ and Python alongside having experience with the latest industry standard so􀅌ware, source control and most up to date game engines.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a graduate of Indie Game Production MA where I achieved a pass and I’m also a graduate of Games Production BSc where I achieved first class honours. My other educational achievements include diplomas in the subjects of 2D, 3D game development and ICT. I can write code in several programming languages including C#, C++ and Python alongside having experience with the latest industry standard software, source control and most up to date game engines. I am currently working on a couple of indie game projects in my own time that I plan on eventually publishing. I am always eager to learn and develop new skills required for any games development role.</p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
           </div>
+          <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.youtube.com/@Connor4333">YouTube Portfolio</a></div>
         </div>
       </div>
       <div class="row">
@@ -50,6 +51,8 @@
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://github.com/connor1994">GitHub Portfolio</a></div>
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
         <div class="col-md-4"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://sketchfab.com/conn0">3D Portfolio</a></div>
+      </div>
+      <div class="row">
       </div>
       <div class="row">
         <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="MA/CRJ-Introduction.html">Critical Reflective Journal (MA)</a></div>
@@ -65,15 +68,35 @@
       </div>
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - (Upcoming) Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary"><b>Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><span class="">My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.&nbsp;All artwork created by Natalie Smith of Fine Chap Games.</b></p>
+          <h3 class="text-center bg-secondary p-2" style=""><b>Kingdom of Eternia - RTS TD (Master's Dissertation)</b></h3>
+          <p class="text-left p-2 bg-primary"><b>Kingdom of Eternia is a RTS tower defense game written in C# and is being developed using Unity that I created for my master's degree disseration. It has evolved over the years from a tower defense focussed game to more emphasis on the RTS genre. The game features RTS elements such as unit hiring, controlling and combat alongside a unique tower building system that allows you to choose a tower and tower attachment to create useful combat combinations. The game also features a custom wrote A* pathfinding algorithm that is used for grid-based actions such as finding the shortest path and so on.&nbsp;</b><b>It is being developed by myself and my partner who is a 2D artist and together we plan on publishing this to multi-platform stores.&nbsp;</b><br><b><br><span class="">My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Building and exporting the game<br><br>All artwork created by Natalie Smith of Fine Chap Games.</b></p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-12">
-              <h3 class="text-center bg-secondary p-2"><b>Development Update Video</b></h3>
+              <h3 class="text-center bg-secondary p-2"><b>Development Video</b></h3>
+              <div class="embed-responsive embed-responsive-16by9 pb-2">
+                <iframe src="https://www.youtube.com/embed/Mje67_koPI0?si=A3oxftqUftgtk1pn" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class="text-center bg-secondary p-2" style=""><b>Blight of the Rose - Demo, Unity, C#</b></h3>
+          <p class="text-left p-2 bg-primary"><b>Blight of the Rose is a multi-platform 2D survival horror game demo developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><span class="">My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.&nbsp;All artwork created by Natalie Smith of Fine Chap Games.</b></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="row">
+            <div class="col-md-12">
+              <h3 class="text-center bg-secondary p-2"><b>Development Video</b></h3>
               <div class="embed-responsive embed-responsive-16by9 pb-2">
                 <iframe src="https://www.youtube.com/embed/8m_oyt7kLKs" allowfullscreen="" class="embed-responsive-item pb-2"></iframe>
               </div>
@@ -94,8 +117,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="text-center bg-secondary p-2 mt-2" style=""><b>Once Upon A Fantasy (Upcoming) - Unity, C#</b></h3>
-          <p class="text-left p-2 bg-primary"><b>Once Upon A Fantasy is an upcoming pixel art 2D tower defense game developed in Unity and written in C# for android devices and PC. The game features building towers that are utilized to defend against waves of enemies. The player is able to build a tower base that buffs the tower and a tower weapon that fires projectiles towards enemies, combining these elements together will create devastating combat combos to claim victory against the opposing force.<br><span class=""><br>My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Building and exporting the game<br><br>All artwork created by Natalie Smith of Fine Chap Games.</b></p>
+          <h3 class="text-center bg-secondary p-2 mt-2" style=""><b>Once Upon A Fantasy - Android Demo - Unity, C#</b></h3>
+          <p class="text-left p-2 bg-primary"><b>Once Upon A Fantasy is a pixel art 2D tower defense game demo developed in Unity and written in C# for android devices and PC. The game features building towers that are utilized to defend against waves of enemies. The player is able to build a tower base that buffs the tower and a tower weapon that fires projectiles towards enemies, combining these elements together will create devastating combat combos to claim victory against the opposing force.<br><span class=""><br>My main responsibilites are:</span><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Building and exporting the game<br><br>All artwork created by Natalie Smith of Fine Chap Games.</b></p>
         </div>
       </div>
       <div class="row">
