--- a/connororton/index.html
+++ b/connororton/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="row">
         <div style="">
-          <p class="text-left p-2 mx-2 mb-0 bg-primary">I am a graduate of Indie Game Production MA where I achieved a pass and I’m also a graduate of Games Production BSc where I achieved first class honours. My other educational achievements include diplomas in the subjects of 2D, 3D game development and ICT. I can write code in several programming languages including C#, C++ and Python alongside having experience with the latest industry standard software, source control and most up to date game engines. I am currently working on a couple of indie game projects in my own time that I plan on eventually publishing. I am always eager to learn and develop new skills required for any games development role.</p>
+          <p class="text-left p-2 mx-2 mb-0 bg-primary"><b>I am a graduate of Indie Game Production MA where I achieved a pass and I’m also a graduate of Games Production BSc where I achieved first class honours. My other educational achievements include diplomas in the subjects of 2D, 3D game development and ICT. I can write code in several programming languages including C#, C++ and Python alongside having experience with the latest industry standard software, source control and most up to date game engines. I am currently working on a couple of indie game projects in my own time that I plan on eventually publishing. I am always eager to learn and develop new skills required for any games development role.</b></p>
           <div class="row px-2">
           </div>
           <div class="row px-2">
@@ -354,7 +354,6 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous" style=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous" style=""></script>
-  
 </body>
 
 </html>
