--- a/connororton/index.html
+++ b/connororton/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="row px-2">
           </div>
-          <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.youtube.com/@Connor4333">YouTube Portfolio</a></div>
+          <div class="col-md-12"><a class="btn btn-block text-center btn-dark p-2 d-flex flex-grow-1 justify-content-center align-items-center mt-2 mx-auto" href="https://www.youtube.com/@connororton94">YouTube Portfolio</a></div>
         </div>
       </div>
       <div class="row">
